syntax = "proto3";

package grpcgateway.pb;

option go_package = "github.com/plgd-dev/hub/grpc-gateway/pb;pb";

message CloudConfigurationRequest {
}

message CloudConfigurationResponse {
    // provides a current time of server in nanoseconds.
    int64 current_time = 1;
    string jwt_owner_claim = 2;
    string jwt_device_id_claim = 3;
    string cloud_id = 4;
    string cloud_url  = 5;
    string cloud_certificate_authorities = 6;
    string authorization_server = 7;
    // exposes default command time to live in nanoseconds for CreateResource, RetrieveResource, UpdateResource, DeleteResource, and UpdateDeviceMetadata commands when it is not set in the request. 0 - means forever.
    int64 default_command_time_to_live = 8;
}